# gmail-newsletter-manager

./: .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  MANIFEST.in  MULTI_ACCOUNT.md  OPEN_SOURCE_READY.md  QUICK_REFERENCE.md  README.md  README.md.backup  RELEASE_READY.md  SECURITY.md  config.example.yaml  make.py  pre-push.sh  publish.sh  pyproject.toml  setup.cfg  setup.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: ci.yml  code-quality.yml  release.yml
docs/: ARCHITECTURE.md  EXAMPLES.md  SETUP.md  TOPIC_MODELING.md
src/newsletter_manager/: __init__.py  __main__.py  cli.py  cli.py.click.backup  config.py  database.py  gogcli_wrapper.py  label_manager.py  newsletter_detector.py  takeout_importer.py  topic_modeler.py
tests/: test_label_manager.py  test_newsletter_detector.py
